--- a/manual/pattern-layout.html
+++ b/manual/pattern-layout.html
@@ -677,7 +677,7 @@ Setting this to <code>false</code> disables this behavior and allows you to excl
 </tbody>
 </table>
 <div class="paragraph">
-<p>If <code>true</code>, do not output ANSI escape codes</p>
+<p>If <code>true</code>, do not output ANSI escape codes.</p>
 </div>
 </div>
 <div class="sect3">
@@ -699,7 +699,7 @@ Setting this to <code>false</code> disables this behavior and allows you to excl
 </tbody>
 </table>
 <div class="paragraph">
-<p>If <code>true</code> and <code>System.console()</code> is null, do not output ANSI escape codes</p>
+<p>If <code>true</code> and <code>System.console()</code> is <code>null</code>, do not output ANSI escape codes</p>
 </div>
 </div>
 </div>
@@ -2683,28 +2683,15 @@ characters, then truncate from the end.</p></td>
 <div class="sect3">
 <h4 id="jansi"><a class="anchor" href="#jansi"></a>ANSI styling on Windows</h4>
 <div class="paragraph">
-<p>ANSI escape sequences are supported natively on many platforms, but not by default on Windows.
-To enable ANSI support add the
-<a href="http://fusesource.github.io/jansi/">Jansi</a>
-dependency to your application, and set <a href="systemproperties.html#log4j2.skipJansi" class="xref page">the <code>log4j2.skipJansi</code> system property</a> to <code>false</code>.
-This allows Log4j to use Jansi to add ANSI escape codes when writing to the console.</p>
+<p>ANSI escape sequences are supported natively on many platforms, but are disabled by default in <code>cmd.exe</code> on Windows.
+To enable ANSI escape sequences, create a registry key named <code>HKEY_CURRENT_USER\Console\VirtualTerminalLevel</code> of type <code>DWORD</code> and set its value to <code>0x1</code>.</p>
 </div>
-<div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-note" title="Note"></i>
-</td>
-<td class="content">
 <div class="paragraph">
-<p>Before Log4j 2.10, Jansi was enabled by default.
-The fact that Jansi requires native code means that Jansi can only be loaded by a single class loader.
-For web applications, this means the Jansi jar has to be in the web container&#8217;s classpath.
-To avoid causing problems for web applications, Log4j no longer automatically tries to load Jansi without explicit configuration from Log4j 2.10 onward.</p>
-</div>
-</td>
-</tr>
-</table>
+<p>See
+<a href="https://devblogs.microsoft.com/commandline/understanding-windows-console-host-settings/">Understanding Windows Console Host Settings</a>
+and
+<a href="https://learn.microsoft.com/en-us/windows/console/console-virtual-terminal-sequences">Console Virtual Terminal Sequences</a>
+Microsoft documentation for more details.</p>
 </div>
 </div>
 </div>
